--- a/calendar.html
+++ b/calendar.html
@@ -112,16 +112,23 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
-<h3>Oct. 22</h3> <br>
-<strong>Class 17, Wednesday</strong><br>
-• Poster Lab.<br>
-• Individual mid-term check-in.<br>
+<h3>Oct. 28</h3> <br>
+<strong>Class 18, Monday</strong><br>
+• Poster progress check-In.<br>
+• Examples and discussion of brand and marketing campaign design.<br>
+• Discussion of the use of type, motion, and how it comes together on the web<br>
+	<br>
+• Animation technical overview.<br>
+• Creating and importing layered files into After-Effects.<br>
+• Creating and naming your layers.
+• Drawing out a storyboard for a looped animation.<br>
+<br>
 
 <br><br>
-<strong>For Monday:</strong><br>
-• One finished poster created in Illustrator.<br>
-• Please upload your work to GitHub.<br>
-• Begin drawing in Illustrator once direction is approved.<br>	
+<strong>For Wednesday:</strong><br>
+• Completed, finalized poster, set up in layers in Illustrator.<br>
+• Complete storboard for a looping animation: 1000 x 1000px, 3 seconds.<br>
+• Include the word Visit and the name of your park only. 
 <br><br>
 </p>
 	
@@ -143,6 +150,30 @@ p    {color: black;}
 • Begin drawing in Illustrator once direction is approved.<br>	
 <br><br>
 </p>
+	
+	
+		<div class="lineup"></div>	
+	<p>
+<h3>Oct. 21</h3> <br>
+<strong>Class 16, Monday</strong><br>
+• Start of Project 5 – National Parks.<br>
+• Presentation and Lecture.<br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• In class, select your park, research the information, gather images for reference.<br>
+• Hand-draw two high-fidelity wires for your poster.<br>
+• Begin drawing in Illustrator once direction is approved.<br>	
+<br><br>
+</p>
+	
+	
+	
+	
+	
+	
+	
+	
 	
 		<div class="lineup"></div>	
 <p>
