--- a/calendar.html
+++ b/calendar.html
@@ -120,7 +120,7 @@ p    {color: black;}
 	<br>
 • Animation technical overview.<br>
 • Creating and importing layered files into After-Effects.<br>
-• Creating and naming your layers.
+• Creating and naming your layers.<br>
 • Drawing out a storyboard for a looped animation.<br>
 <br>
 
