--- a/calendar.html
+++ b/calendar.html
@@ -127,8 +127,10 @@ p    {color: black;}
 <br><br>
 <strong>For Wednesday:</strong><br>
 • Completed, finalized poster, set up in layers in Illustrator.<br>
-• Complete storboard for a looping animation: 1000 x 1000px, 3 seconds.<br>
-• Include the word Visit and the name of your park only. 
+• Printed poster - 11x17 or larger to put up in class.<br>
+• Hand-drawn storyboard pinned up below your poster with three frames.<br>
+• Complete storboard for a looping animation: 3 seconds.<br>
+• Include the word Visit and the name of your park only in the animation.
 <br><br>
 </p>
 	
