--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,42 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h3>Oct. 30</h3> <br>
+<strong>Class 19, Wednesday</strong><br>
+• Final poster and storyboard critique.<br>
+• Quick overview of After Effects and tutorials.<br>
+	<br>
+• Reference the following tutorials:<br>
+	
+	<a href="https://vimeo.com/blog/post/designing-illustrator-for-after-effects-animation/" target="_blank">Illustrator to After Effects best practices</a><br>
+	
+	<a href="https://youtu.be/XhD93-ZA7vc" target="_blank">Puppet Pin Tool Tutorial</a><br>
+	
+	<a href="https://vimeo.com/blog/post/basic-masking-in-after-effects/" target="_blank">Basic masking in After Effects</a><br>
+	
+	
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-animate-liquid-in-after-effects" target="_blank">Animated Liquid Tutorial</a> <br>
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-create-animated-fire-in-after-effects" target="_blank">Animated Fire Tutorial</a><br><br>
+	
+• Keep in mind these examples of animation:<br>
+	<a href="https://www.expedia.co.uk/vc/c/festival-travel-posters/" target="_blank">Expedia posters</a> <br>
+	<a href="https://www.behance.net/gallery/57130687/Animated-Travel-Posters" target="_blank">Travel Poster Series on Behance</a> <br>
+	<a href="https://www.fusedmagazine.co.uk/nostalgic-travel-posters/" target="_blank">Fused Magazine Posters</a>
+	
+<br>
+<br>
+
+<br><br>
+<strong>For Monday:</strong><br>
+• A finished looped animation of your poster. Target is 3 seconds, with the dimensions being 1224px x 793px.<br>
+• In this iteration, keep all elements of your poster the same.<br>
+• We will finalize and upload to GitHub in class on Monday.<br>
+<br><br>
+</p>
+	
+			<div class="lineup"></div>	
+
+	<p>
 <h3>Oct. 28</h3> <br>
 <strong>Class 18, Monday</strong><br>
 • Poster progress check-In.<br>
