--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,27 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	<p>
+<h3>Nov. 04</h3> <br>
+<strong>Class 20, Monday</strong><br>
+• Image swap, background images, pre-loading, and Vertical Browser Height - in class lab in DreamWeaver.<br>
+• Introduction to frame-rate, looping, and exporting gifs for the web.<br>
+• Lab with one-on-one animation check-in.<br>
+<br><br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• Upload your swap-image poster and animation to GitHub.<br>
+• The page should show your poster, and then swap the poster to an animated gif version on roll-over.<br>
+• Animated gif should be: 3-seconds, with the dimensions being 1224px x 793px, looping infinitely.<br>
+• In this iteration, keep all elements of your poster the same.<br>
+• Your final so far on GitHub should have: 1. Hand Sketches. 2. The file you are finalizing today.<br>
+<br><br>
+</p>
+	
+	
+	
+				<div class="lineup"></div>	
 <p>
 <h3>Oct. 30</h3> <br>
 <strong>Class 19, Wednesday</strong><br>
