--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,33 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+		<p>
+<h3>Nov. 06</h3> <br>
+<strong>Class 21, Wednesday</strong><br>
+• Animation progress critique.<br>
+• Intro to UX.<br>
+• Project 5.2 Intro.<br>
+<br><br>
+
+<br><br>
+<strong>For Monday:</strong><br>
+• Make sure your animation is uploaded and working in class.<br>
+• Create a wire-frame. First by-hand, and then in Illustrator that includes the following:<br>
+1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
+2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
+3. Date the area became a national park.<br>
+4. Five activities from your poster. Consider illustrating these or adding to the description. Do not use photographs on the site. <br>
+5. Longitude and longitude of the park location. <br>
+6. Total square mileage of the park. <br>
+7. A section to advertise 3 additional parks the user can visit. <br>
+8. Link to the nps.gov website.<br>
+9. Citation of sources you used to gather information about the park. <br>
+<br><br>
+</p>
+	
+				<div class="lineup"></div>	
+
+	
 	<p>
 <h3>Nov. 04</h3> <br>
 <strong>Class 20, Monday</strong><br>
