--- a/calendar.html
+++ b/calendar.html
@@ -119,9 +119,9 @@ p    {color: black;}
 • Project 5.2 Intro.<br>
 <br><br>
 
-<br><br>
+
 <strong>For Monday:</strong><br>
-• Make sure your animation is uploaded and working in class.<br>
+• Make sure your animation is uploaded and working in class.<br><br>
 • Create a wire-frame. First by-hand, and then in Illustrator that includes the following:<br>
 1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
 2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
