--- a/calendar.html
+++ b/calendar.html
@@ -124,7 +124,7 @@ p    {color: black;}
 • Make sure your animation is uploaded and working in class.<br><br>
 • Create a wire-frame. First by-hand, and then in Illustrator that includes the following:<br>
 1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
-2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
+2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 characters). <br>
 3. Date the area became a national park.<br>
 4. Five activities from your poster. Consider illustrating these or adding to the description. Do not use photographs on the site. <br>
 5. Longitude and longitude of the park location. <br>
