--- a/calendar.html
+++ b/calendar.html
@@ -132,6 +132,7 @@ p    {color: black;}
 7. A section to advertise 3 additional parks the user can visit. <br>
 8. Link to the nps.gov website.<br>
 9. Citation of sources you used to gather information about the park. <br>
+10. Note that the Unigrid should be used as an organizational tool for your site – the number of columns stays the same, and the height is flexible to the needs of your content.
 <br><br>
 </p>
 	
