--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,23 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 		<p>
+<h3>Nov. 11</h3> <br>
+<strong>Class 22, Monday</strong><br>
+• Fluid Grids and Parallax Scroll In-Class exercise.<br>
+• We will be using Javascript developed by Dixon and Moe, <a href="https://dixonandmoe.com/rellax/" target="_blank">https://dixonandmoe.com/rellax/</a>.<br>
+• Afterwards, we will check in to review the wireframes, and plan on executing the header section of your website.<br>
+<br><br>
+
+
+<strong>For Wednesday:</strong><br>
+• Upload finalized wireframe to GitHub with any changes/additions discussed in class.<br>
+• You should have a working parallax version of your site header by the end of class. Do not upload this yet.<br><br>
+	
+	
+	
+	
+	<div class="lineup"></div>
+		<p>
 <h3>Nov. 06</h3> <br>
 <strong>Class 21, Wednesday</strong><br>
 • Animation progress critique.<br>
