--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 		<p>
+<h3>Nov. 12</h3> <br>
+<strong>Class 23, Wednesday</strong><br>
+• Go over select wire frames.<br>
+• Explore examples of parallax scrolling on the web<br>
+• Execute header section of your website.<br>
+<br><br>
+
+<strong>For Monday:</strong><br>
+• Upload finalized header section to GitHub.<br>
+<br><br>
+	</p>	
+	
+	
+	<div class="lineup"></div>
+		<p>
 <h3>Nov. 11</h3> <br>
 <strong>Class 22, Monday</strong><br>
 • Fluid Grids and Parallax Scroll In-Class exercise.<br>
@@ -119,11 +134,10 @@ p    {color: black;}
 • Afterwards, we will check in to review the wireframes, and plan on executing the header section of your website.<br>
 <br><br>
 
-
 <strong>For Wednesday:</strong><br>
 • Upload finalized wireframe to GitHub with any changes/additions discussed in class.<br>
 • You should have a working parallax version of your site header by the end of class. Do not upload this yet.<br><br>
-	
+	</p>
 	
 	
 	
