--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,32 @@ p    {color: black;}
 	
 		<p>
 <h3>Nov. 12</h3> <br>
+<strong>Class 24, Monday</strong><br>
+• Review programmed headers of website in class.<br>
+• Go over mobile design practices and collapsible grids. Review breakpoints in CSS.<br>
+• Beign execution of the entire site design.<br>
+<br><br>
+
+<strong>Wednesday:</strong><br>
+• <strong>For those who volunteered, we will be attending a studio visit:</strong><br>
+<a href="https://officeofexperience.com/" target="_blank">The Office of Experience</a><br>
+125 S. Wacker Dr. Ste 3000<br>
+<br>
+Please plan to arrive before 4.15 and head over to check in with security and wait for others in the lobby. We will head up via the elevators up to the studio as a class. <br>
+You must arrive on time, or you will be marked absent and receive a zero grade on an assignment.<br>
+Please be curteous – we are a large group, and it is an open office. Keep noise to a minimum. <br>
+We will chat with a digital group of creatives, including writers, UX designers and visual digital designers.<br><br>
+Please brainstorm and bring questions for these individuals for our meeting.<br>
+We will be having a short class with a 6.15pm scheduled end-time. <br>
+<br>
+For Monday, please have your entire website designed in web and mobile formats.<br>
+<br><br>
+	</p>	
+	
+	
+		<div class="lineup"></div>
+			<p>
+<h3>Nov. 12</h3> <br>
 <strong>Class 23, Wednesday</strong><br>
 • Go over select wire frames.<br>
 • Explore examples of parallax scrolling on the web<br>
@@ -123,6 +149,7 @@ p    {color: black;}
 • Upload finalized header section to GitHub.<br>
 <br><br>
 	</p>	
+	
 	
 	
 	<div class="lineup"></div>
