--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,34 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	
+			<p>
+<h3>Nov. 20</h3> <br>
+<strong>Class 25, Wednesday</strong><br>
+• IMPORTANT: We will be attending a studio visit:<br>
+<a href="https://officeofexperience.com/" target="_blank">The Office of Experience</a><br>
+125 S. Wacker Dr. Ste 3000<br>
+<br>
+Please plan to arrive before 4.15 and head over to check in with security and wait for others in the lobby. I will be downstairs at 4.15 and plan to head up with everyone after security check-in. <br><br>
+You must arrive on time, or you will be marked absent and receive a zero grade on an assignment.<br>
+Please be curteous – we are a large group, and it is an open office. Keep noise to a minimum. <br>
+We will chat with a digital group of creatives, including writers, UX designers and visual digital designers.<br><br>
+Please brainstorm and bring questions for these individuals for our meeting.<br>
+We will be having a short class with a 6.15pm scheduled end-time. <br>
+<br>
+<strong>For Monday</strong><br>
+• Make sure you upload the programmed header of your website.<br>
+• Upload a jpg of your entire page design, including copy, imagery and icons. <br>
+• On Monday, we will go over setting up a random-pull database, and work on finishing your website.<br> 
+<br><br>
+	</p>	
+	
+	
+	
+	
+			<div class="lineup"></div>
+
+	
 		<p>
 <h3>Nov. 18</h3> <br>
 <strong>Class 24, Monday</strong><br>
