--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,43 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+				<p>
+<h3>Nov. 25</h3> <br>
+<strong>Class 26, Monday</strong><br>
+• Post studio visit discussion. <br>
+• Go over headers and website design progress.<br>
+• Lecture and lab - using Javascript to set up random databases. <br>
+• Review of mobile breakpoint.<br>
+• The code for this exercise can be found here (view source to get the code): <a href="https://mjanic3.github.io/DES350/randomizer.html" target="_blank">3 Column Randomzier</a><br><br>
+	Below is a link list of National Park Gifs for your 3-column randomizer. Group the posters into three databases and link to your page. <br><br>
+
+Sequoia: https://zali30.github.io/DES350/web/photo/posterM.gif<br>
+Arches: https://k11borrero.github.io/DES350/finalparksposter.gif<br>
+Grand Canyon: https://anhvyb.github.io/DES350/posterRRRb%203_1.gif<br>
+Grand Teton: https://kdirnb2.github.io/DES350/newposter.gif<br>
+Denali: https://tmfriese.github.io/DES350/Comp-1_4.gif<br>
+Mesa Verde: https://agarc88.github.io/DES350/Mesa-Verde-Poster-1_1.gif<br>
+Death Valley: https://cgasid2.github.io/DES350/final-poster-animation-.gif<br>
+Badlands: https://gira006.github.io/DES350/poster_animation.gif<br>
+Yellowstone: https://ahalam2.github.io/DES350/Yellowstone.gif<br>
+Glacier: https://donteking.github.io/DES350/AnimatedPoster.gif<br>
+Hawaii Volcanoes: https://samorie.github.io/DES350/poster_final1.gif<br>
+Rocky Mountain: https://dmejia11.github.io/DES350/Mejia_rocky.gif<br>
+Olympic: https://jmiran28.github.io/DES350/olympic-poster.gif<br>
+Zion: https://snguye44.github.io/DES350/natureposterfinal.gif<br>
+Joshua Tree: https://lpark25.github.io/DES350/Comp-1_1.gif<br>
+Great Smoky Mountains: https://avelaz36.github.io/DES350/np_poster.gif<br>
+Yosemite: https://vweiss4.github.io/DES350/poster-2.gif<br>
+<br>
+<strong>For Wednesday</strong><br>
+• Wednesday will be our last lab.<br>
+• Class will let out early – we will check in individually on your progress. <br>
+• On Monday and Tuesday, each student will present their final project to the class and a guest critic.<br> 
+<br><br>
+	</p>	
+	
+				<div class="lineup"></div>
+	
 			<p>
 <h3>Nov. 20</h3> <br>
 <strong>Class 25, Wednesday</strong><br>
