--- a/projects.html
+++ b/projects.html
@@ -376,6 +376,20 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
+<h2>Project 5 / Final – National Parks</h2><br>
+	
+• We will create a campaign to promote a National Park of your choice.<br>
+• We will investigate best user experience practices applied to developing content for the web.<br>
+• This will include developing a poster, animation, and a website that work cohesively together.<br>
+• We will be using the grid structres inspired by Massimo Vignelli in all aspects of the project.<br>
+• The campaign will cross-link the websites and allow various access and exit points to the user. <br>
+
+<br>
+</p>
+	
+	
+	<div class="lineup"></div>
+	<p>
 <h2>Project 4 / Midterm – The Portfolio</h2><br>
 	
 • Research 2 to 3 sites that are good examples of a portfolio site. Publish links and a couple points illustrating why you chose them.<br>
