--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,43 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+					<p>
+<h3>Dec. 2 + 4</h3> <br>
+<strong>Finals</strong><br>
+• Introduction from guest critic. <br>
+• Presentation and class critique, 9 students per class. Please attend both classes.<br>
+• Each participant will present a favorite project (not including the final), and their final National Park poster and website, with supporting sketches as necessary. <br>
+• Please provide support to your peers by participating in the critique. <br> 
+	<br><br>
+
+
+	</p>		
+	
+	
+			<div class="lineup"></div>
+
+					<p>
+<h3>Nov. 27</h3> <br>
+<strong>Class 27, Wednesday</strong><br>
+• Practice run of final presentation of the website. <br>
+• Lab for finishing the website.<br>
+	
+	<br><br>
+
+<strong>For Monday</strong><br>
+• Final presentations will take place on Monday and Wednesday of next week.<br>
+• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. <br>
+• We will have a guest critic each day of the finals Good luck! <br> 
+<br><br>
+	</p>	
+	
+	
+	
+	
+	
+		<div class="lineup"></div>
+	
+	
 	
 				<p>
 <h3>Nov. 25</h3> <br>
