--- a/resources.html
+++ b/resources.html
@@ -122,7 +122,10 @@ p    {color: black;}
 </p>
 
 
-
+<div class="lineup"></div>
+<p>
+<h2><a href="github_setup.pdf" target="_blank">Github Setup Instructions</a><br>
+</p>	
 
 		
 <div class="lineup"></div>
