--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ Our goals in this course are:<br>
 4. Structure and write Markup Language (HTML) and to style it by means of CSS.<br>
 5. Identify the separation of design and content. We will identify and utilize best practices in usability, accessibility, and digital user interface design.<br>
 6. We will enhance HTML pages with basic JavaScript.<br><br>
+	<a href="DES_350_F2020_MJanicki.pdf" target="_blank">Class Syllabus PDF</a><br><br>
 </p>
 
 	
