--- a/index.html
+++ b/index.html
@@ -157,12 +157,7 @@ We will be meeting remotely over Zoom during class time. <br>
 We will meet as a full group.<br>
 <br>
 <b>Wednesdays</b><br>
-We will meet in smaller groups of 4, with the following breakdown: <br><br>
-	4.00–4.30: Joanna Apolinar Cirilo, Mary Jane Cramer, Viviana Diaz, Nadia Ermer<br>
-	4.30–5.00: Ari Gonzalez, Kshitij Gotiwale, Faye Gozon, Haley Hensley<br>
-	5.00–5.30: Tommy Hinds, Ann Hsieh, Linh Huynh, Erika Jaramillo<br>
-	5.30–6.00: Huda Knah, Maddie Lockwood, Sebastian Lopez, Briana McElroy<br>
-	6.00–6.30: Daniel Ortigoza, Victoria Pawlyk, Anotnio Soto, Ellie Spearman<br><br><br>
+We will meet in smaller groups of 4, starting in September. <br><br>
 	We will aslo use time on Monday for one-on-one breakout room questions as they come up. <br><br>
 Blackboard will be updated with assignments and grades through the semester so that you can keep an eye on your progress. You are required to show up to every Monday class, and be available for the selected time on Wednesday. The rest of class time on Wednesdays will be used as a lab for you to research, design, and program.
 	<br><br>
