--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ We will meet as a full group.<br>
 <br>
 <b>Wednesdays</b><br>
 We will meet in smaller groups of 4, starting in September. <br><br>
-	We will aslo use time on Monday for one-on-one breakout room questions as they come up. <br><br>
+	We will also use time on Monday for one-on-one breakout room questions as they come up. <br><br>
 Blackboard will be updated with assignments and grades through the semester so that you can keep an eye on your progress. You are required to show up to every Monday class, and be available for the selected time on Wednesday. The rest of class time on Wednesdays will be used as a lab for you to research, design, and program.
 	<br><br>
 </p>
