--- a/calendar.html
+++ b/calendar.html
@@ -123,7 +123,22 @@ p    {color: black;}
 	
 		<div class="lineup"></div>
 
-</div>
+	<p>
+<h3>Aug. 26</h3> <br>
+<strong>Class 2, Wednesday</strong><br>
+• Question of the day: What kind of work would you like to pursue after school? <br>
+• Set up of a class folder on your computer.  <br>
+• What does HTML, CSS, and Javascript do. <br>
+• Group Calculator HTML Programming. <br>
+• Styling in CSS.<br>
+• Breakout groups for site set-up and Calculator questions.<br>
+<br>
+<b>For Monday:</b><br>
+• Please have a working calculator set up on your site:<br>
+yoursitename.github.io/DES350/calculator.html <br><br>
+<br><br>
+	
+	</div>
 
 
 
