--- a/projects.html
+++ b/projects.html
@@ -381,11 +381,11 @@ p    {color: black;}
 	
 	
 <h2>Project 1 – HTML Calculator</h2><br>
-We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: 
-• Functionality – how does it work?
-• User experience – how will a user interact with it?
-• User Familiarity – how do calculators usually look? 
-• Aesthetics – does the style add or detract from the function? 
+We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: <br><br>
+• Functionality – how does it work?<br>
+• User experience – how will a user interact with it?<br>
+• User Familiarity – how do calculators usually look? <br>
+• Aesthetics – does the style add or detract from the function? <br>
 <br>
 <br><br>
 </p>
