--- a/calendar.html
+++ b/calendar.html
@@ -111,7 +111,24 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
-		
+	
+	
+		<p>
+<h3>Aug. 31</h3> <br>
+<strong>Class 3, Monday</strong><br>
+• Presentations of the calculator work. <br>
+• Mini-lab to set up a home page on GitHub.  <br>
+• UI design lecture. <br>
+• Mood boarding and design of the second version of the calculator. <br>
+• Individual check-ins.<br>
+
+<br><br>
+	</p>
+	
+	
+	
+	
+	<div class="lineup"></div>
 	<p>
 <h3>Aug. 26</h3> <br>
 <strong>Class 2, Wednesday</strong><br>
