--- a/calendar.html
+++ b/calendar.html
@@ -111,8 +111,23 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+			<p>
+<h3>Sep. 02</h3> <br>
+<strong>Class 4, Wednesday</strong><br>
+• Go over moodboad assignment. <br>
+• Look at examples of existing calculators.  <br>
+• Individual check-ins on illustration progress. <br>
+<br>
+<b>For Wednesday:</b><br>
+• Upload a JPG of your final calculator design:<br>
+
+<br><br>
+	</p>
 	
 	
+	
+	
+<div class="lineup"></div>	
 		<p>
 <h3>Aug. 31</h3> <br>
 <strong>Class 3, Monday</strong><br>
@@ -124,8 +139,6 @@ p    {color: black;}
 
 <br><br>
 	</p>
-	
-	
 	
 	
 	<div class="lineup"></div>
@@ -164,11 +177,76 @@ yoursitename.github.io/DES350/calculator.html <br><br>
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2020<br>
 Mondays + Wednesdays<br>
-Instructor: Michal Janicki</p>
+Instructor: <a href="http://studiobema.com" target="_blank">Michal Janicki</a></p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-<a href="http://studiobema.com" target="_blank">Michal Janicki</a> <br>
+<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
+
+<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
+
+
+<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
+
+
+
+<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
+
+
+
+<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
+
+
+<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
+
+
+
+<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
+
+
+<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
+
+
+
+<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
+
+
+
+<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
+
+
+
+
+<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
+
+
+<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
+
+
+
+<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
+
+
+
+<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
+
+
+
+<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
+
+
+
+
+<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
+
+
+
+
+<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
+
+
+
+<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>
 </p>
 
 
