--- a/index.html
+++ b/index.html
@@ -157,8 +157,13 @@ We will be meeting remotely over Zoom during class time. <br>
 We will meet as a full group.<br>
 <br>
 <b>Wednesdays</b><br>
-We will meet in smaller groups of 4, starting in September. <br><br>
-	We will also use time on Monday for one-on-one breakout room questions as they come up. <br><br>
+We will meet in smaller groups of 4, with the following breakdown: <br><br>
+	4.00–4.30: Joanna Apolinar Cirilo, Mary Jane Cramer, Viviana Diaz, Nadia Ermer<br>
+	4.30–5.00: Ari Gonzalez, Kshitij Gotiwale, Faye Gozon, Haley Hensley<br>
+	5.00–5.30: Tommy Hinds, Ann Hsieh, Linh Huynh, Erika Jaramillo<br>
+	5.30–6.00: Huda Knah, Maddie Lockwood, Sebastian Lopez, Briana McElroy<br>
+	6.00–6.30: Daniel Ortigoza, Victoria Pawlyk, Anotnio Soto, Ellie Spearman<br><br><br>
+	We will aslo use time on Monday for one-on-one breakout room questions as they come up. <br><br>
 Blackboard will be updated with assignments and grades through the semester so that you can keep an eye on your progress. You are required to show up to every Monday class, and be available for the selected time on Wednesday. The rest of class time on Wednesdays will be used as a lab for you to research, design, and program.
 	<br><br>
 </p>
@@ -200,11 +205,76 @@ Do not copy work and pass it off as your own. This is a serious matter and can l
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2020<br>
 Mondays + Wednesdays<br>
-Instructor: Michal Janicki</p>
+Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> </p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-<a href="http://studiobema.com/" target="_blank">Michal Janicki</a> <br>	
+<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
+
+<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
+
+
+<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
+
+
+
+<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
+
+
+
+<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
+
+
+<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
+
+
+
+<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
+
+
+<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
+
+
+
+<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
+
+
+
+<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
+
+
+
+
+<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
+
+
+<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
+
+
+
+<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
+
+
+
+<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
+
+
+
+<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
+
+
+
+
+<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
+
+
+
+
+<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
+
+
+
+<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>	
   <br>
 </p>
 </div>
