--- a/projects.html
+++ b/projects.html
@@ -440,11 +440,76 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2020<br>
 Mondays + Wednesdays<br>
-Instructor: Michal Janicki</p>
+Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a></p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-<a href="http://studiobema.com/" target="_blank">Michal Janicki</a> <br>	
+	<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
+
+<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
+
+
+<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
+
+
+
+<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
+
+
+
+<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
+
+
+<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
+
+
+
+<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
+
+
+<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
+
+
+
+<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
+
+
+
+<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
+
+
+
+
+<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
+
+
+<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
+
+
+
+<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
+
+
+
+<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
+
+
+
+<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
+
+
+
+
+<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
+
+
+
+
+<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
+
+
+
+<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>	
   <br>
 </p>
 </div>
