--- a/calendar.html
+++ b/calendar.html
@@ -119,7 +119,11 @@ p    {color: black;}
 • Individual check-ins on illustration progress. <br>
 <br>
 <b>For Wednesday:</b><br>
-• Upload a JPG of your final calculator design:<br>
+• Upload a JPG of your final calculator design to GitHub by Wednesday morning.<br>
+• A couple pointers: remember that your finished calculator artboard should be a horizontal rectangle, 17 wide x 11 high dimensions.
+• Send any questions or progress as you go.<br>
+• We will critique the finished product and plan next steps when we are back from break. <br>
+• Enjoy the long weekend! 
 
 <br><br>
 	</p>
