--- a/calendar.html
+++ b/calendar.html
@@ -111,19 +111,34 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	
+			<p>
+<h3>Sep. 07</h3> <br>
+<strong>No Class, Monday</strong><br>
+<b>For Wednesday please have the following:</b><br>
+• Upload a JPG of your final calculator design to GitHub by Wednesday morning.<br>
+• A couple pointers: remember that your finished calculator artboard should be a horizontal rectangle, 17 wide x 11 high dimensions.<br>
+• Consider how the display numbers will look.<br>
+• Consider what happens when people roll over buttons. <br>
+• Send any questions or progress as you go over email..<br>
+• We will critique the finished product and plan next steps when we are back from break. <br>
+• Enjoy the long weekend! 
+
+<br><br>
+	</p>
+	
+	
+	
+<div class="lineup"></div>	
+
+	
 			<p>
 <h3>Sep. 02</h3> <br>
 <strong>Class 4, Wednesday</strong><br>
 • Go over moodboad assignment. <br>
 • Look at examples of existing calculators.  <br>
 • Individual check-ins on illustration progress. <br>
-<br>
-<b>For Wednesday:</b><br>
-• Upload a JPG of your final calculator design to GitHub by Wednesday morning.<br>
-• A couple pointers: remember that your finished calculator artboard should be a horizontal rectangle, 17 wide x 11 high dimensions.<br>
-• Send any questions or progress as you go.<br>
-• We will critique the finished product and plan next steps when we are back from break. <br>
-• Enjoy the long weekend! 
+<br> 
 
 <br><br>
 	</p>
