--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,28 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+	
+			<p>
+<h3>Sep. 09</h3> <br>
+<strong>Class 5, Wednesday</strong><br>
+• Quick class crit of calculator designs.<br>
+• HTML / Dreamweaver Workshop: Positioning Elements on a page.<br>
+• New Resources for positioning exercises and font embedding.<br>
+• Lab for programming. Final calculator will be due on Wednesday. <br>
+<br>
+	<b>For Monday:</b><br>
+• Get sign-off on your finalized design in class, or via email.<br>
+• Choose fonts if needed via the Google Fonts page.<br>
+• Create a link to your working calculator on the GitHub home page to show progress. 
+
+<br><br>
+	</p>
+		
+	
+	
+	
+	
+	<div class="lineup"></div>	
 			<p>
 <h3>Sep. 07</h3> <br>
 <strong>No Class, Monday</strong><br>
