--- a/resources.html
+++ b/resources.html
@@ -121,6 +121,18 @@ p    {color: black;}
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>
 
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/css/css_positioning.asp" target="_blank">Positioning with CSS</a><br>
+</p>	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://fonts.google.com" target="_blank">Google Fonts</a><br>
+</p>
+
+	
 
 <div class="lineup"></div>
 <p>
