--- a/resources.html
+++ b/resources.html
@@ -122,6 +122,13 @@ p    {color: black;}
 </p>
 
 	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/css/css_align.asp" target="_blank">Centering with CSS</a><br>
+</p>	
+	
+	
 <div class="lineup"></div>
 <p>
 <h2><a href="https://www.w3schools.com/css/css_positioning.asp" target="_blank">Positioning with CSS</a><br>
