--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,24 @@ p    {color: black;}
 	
 	
 	
+	
+				<p>
+<h3>Sep. 09</h3> <br>
+<strong>Class 6, Monday</strong><br>
+• Review grading, uploading policy.<br>
+• HTML / Dreamweaver Workshop: Positioning Elements on a page.<br>
+• Fonts: Google and custom embedding.<br>
+• Lab for programming, with one-on-one breakouts. <br>
+<br>
+	<b>For Wednesday:</b><br>
+• We will be breaking out into groups of 3-4 to go over questions on your programmed calculator. 
+
+<br><br>
+	</p>
+	
+	
+	
+	<div class="lineup"></div>	
 			<p>
 <h3>Sep. 09</h3> <br>
 <strong>Class 5, Wednesday</strong><br>
