--- a/calendar.html
+++ b/calendar.html
@@ -113,7 +113,24 @@ p    {color: black;}
 	
 	
 	
+					<p>
+<h3>Sep. 16</h3> <br>
+<strong>Class 7, Wednesday</strong><br>
+• Lab for programming, with group breakouts. <br>
+<br>
+	<b>For Monday:</b><br>
+• Upload the final version of your calculator to GitHub for grading. <br>
+• Write out an essay based on the 10 principles of Dieter Rams. Answer how each of the 10 applies to your own design work, or how you hope to apply them. See the article here for a reference on his thoughts:<br><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">https://readymag.com/shuffle/dieter-rams/</a><br><br>
+• Create your essay as an HTML page and link it to your GitHub home page.<br>
+• The only styling you can apply is to change overall page width, and bolding/italicizing of text. <br><br>
+ 
+
+<br><br>
+	</p>
 	
+	
+	
+	<div class="lineup"></div>		
 				<p>
 <h3>Sep. 14</h3> <br>
 <strong>Class 6, Monday</strong><br>
