--- a/resources.html
+++ b/resources.html
@@ -115,8 +115,12 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+<p>
+<h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">Dieter Rams: 10 Principles for Good Design</a><br>
+</p>	
 	
 	
+<div class="lineup"></div>	
 <p>
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>
