--- a/calendar.html
+++ b/calendar.html
@@ -113,6 +113,22 @@ p    {color: black;}
 	
 	
 	
+						<p>
+<h3>Sep. 21</h3> <br>
+<strong>Class 8, Monday</strong><br>
+• Kick off project 2! <br>
+• Look at examples of how type, shape and grids are applied across the web.<br><br>
+• Break out into smaller groups to look at any last coding issues and questions on the calculator. <br><br>
+ 
+		<b>Due Wednesday</b><br>
+• Your final calculator programmed and uploaded to GitHub for grading. <br>
+
+<br><br>
+	</p>
+	
+	
+	
+	<div class="lineup"></div>	
 					<p>
 <h3>Sep. 16</h3> <br>
 <strong>Class 7, Wednesday</strong><br>
