--- a/calendar.html
+++ b/calendar.html
@@ -112,6 +112,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+	<h3>Sep. 21</h3> <br>
+<strong>Class 9, Wednesday</strong><br>
+• Lab time for our second assignment. <br>
+• Breakout at 5 to take a look at calculator examples from classmates.<br><br>
+• Open discussion of the posters. <br><br>
+ 
+		<b>Due Monday</b><br>
+• Final poster design as a jpg uploaded to your GitHub. <br>
+
+<br><br>
+	</p>
+	
+	
+	
+	<div class="lineup"></div>	
 	
 						<p>
 <h3>Sep. 21</h3> <br>
