--- a/resources.html
+++ b/resources.html
@@ -116,6 +116,22 @@ p    {color: black;}
 	
 	
 <p>
+<h2><a href="https://www.toptal.com/designers/htmlarrows/math/" target="_blank">HTML Math Symbols</a><br>
+</p>	
+	
+	
+	<div class="lineup"></div>	
+	
+<p>
+<h2>Fix for Safari browser display font dimming. In the CSS of your code, inside the Display property where you specify font color, put in this line of code: <br>
+-webkit-text-fill-color: #000;  <br>
+</p>		
+	
+	
+	
+	<div class="lineup"></div>	
+	
+<p>
 <h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">Dieter Rams: 10 Principles for Good Design</a><br>
 </p>	
 	
